finalized A2